--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 :root {
   --primary-font-color: #212121;
-  --footer-background: #2f303a;
+  --background-color: #2f303a;
   --filter-btn-color: #f5f4fa;
   --blue-color: #2196f3;
   --grey-color: #757575;
@@ -75,6 +75,9 @@ body {
   font-weight: 700;
   font-size: 26px;
   color: #000000;
+}
+.services-head {
+  background-color: var(--background-color);
 }
 .img-projects {
   width: 370px;
@@ -156,7 +159,7 @@ body {
 .footer {
   width: 100%;
   height: 252px;
-  background-color: var(--footer-background);
+  background-color: var(--background-color);
   padding-top: 60px;
 }
 /* .footer-flex {
