--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
   font-family: "Roboto", sans-serif;
   color: #212121;
 }
+.remove-margin-l {
+  margin-left: 0;
+}
+.remove-margin-r {
+  margin-right: 0;
+}
 .sec-header {
   border-bottom: 1px solid #ececec;
 }
@@ -160,11 +166,14 @@ body {
   width: 100%;
   height: 252px;
   background-color: var(--background-color);
-  padding-top: 60px;
-}
-/* .footer-flex {
+
   display: flex;
-} */
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  /* align-content: center; */
+  /* align-self: center; */
+}
 .logo-studio-footer {
   flex: 1;
   font-family: "Raleway", sans-serif;
@@ -174,7 +183,7 @@ body {
 }
 .footer-contact {
   margin-left: 215px;
-  margin-top: 24px;
+  /* margin-top: 24px; */
 }
 .footer-li-design {
   color: #ffffff;
