--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body {
 .header .nav .links .link:hover,
 .header .nav .links .link:focus {
   color: var(--blue-color);
+  outline: none;
 }
 
 .header .contact-links {
@@ -96,6 +97,7 @@ body {
 .header .contact-links .link:hover,
 .header .contact-links .link:focus {
   color: var(--blue-color);
+  outline: none;
 }
 
 .main-header {
@@ -141,6 +143,7 @@ body {
 .main-header .main-button:hover,
 .main-header .main-button:focus {
   color: var(--header-color);
+  outline: none;
 }
 
 .main-features-card {
@@ -289,6 +292,7 @@ body {
 .footer .links .link:hover,
 .footer .links .link:focus {
   color: var(--blue-color);
+  outline: none;
 }
 
 .portfolio-buttons {
@@ -314,6 +318,7 @@ body {
 .portfolio-buttons .filter-button:active {
   background-color: var(--blue-color);
   color: var(--white-color);
+  outline: none;
 
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
