--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
+  /* height: 80px; */
 }
 
 .header .nav {
@@ -45,6 +45,7 @@ body {
   line-height: 31px;
   color: var(--header-color);
   text-decoration: none;
+  padding: 32px 0;
 }
 
 .header .nav .logo-web {
@@ -60,7 +61,6 @@ body {
   list-style: none;
   gap: 46px;
   margin: 0;
-  padding: 0;
   align-items: center;
 }
 
