--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ body {
   align-items: center;
   justify-content: center;
   background-color: var(--dark-background);
-  height: 600px;
+  padding: 200px 0;
 }
 
 .main-header .main-text {
